# bhwinfo

./: .gitignore  CMakeLists.txt  README.md  bhwinfo.hpp  build-and-run-example.sh  build-and-run.sh  example.cpp  libhwinfo.hpp  test.cpp
include/: cpu.hpp  mem.hpp  ut.hpp
src/: collect.hpp  cpu.cpp  cpu.hpp  libhwinfo.hpp  mem.cpp  shared.hpp  ut.hpp
